# yolo8-person-detector

./: README.md  kuavo_follow_controller.py  local_astar_planner.py  person_detector.py  requirements.txt  train_person_yolo.py
ros_kuavo_person_follow/: CMakeLists.txt  package.xml
ros_kuavo_person_follow/launch/: follow_robot.launch  vision_tracking.launch
ros_kuavo_person_follow/msg/: PersonState.msg
ros_kuavo_person_follow/scripts/: follow_controller_node.py  kuavo_lowlevel_bridge_node.py  vision_person_tracker_node.py
