<?xml version="1.0"?>
<package format="2">
  <name>kuavo_person_follow</name>
  <version>0.0.1</version>
  <description>Kuavo4Pro person following using vision and lidar.</description>

  <maintainer email="you@example.com">kuavo_user</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
</package>
